/* Japanese */ classified on'yomi readings <偰#69585666>

--- a/en/偰/偰.11136.wikitext
+++ b/en/偰/偰.11136.wikitext
@@ -46,7 +46,11 @@
 # {{rfdef|ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=せつ, せち|kun=きよ-い}}
+{{ja-readings
+|goon=せち
+|kanon=せつ
+|kun=きよ-い
+}}
 
 ----
 
