--- a/en/l/lies.16986.wikitext
+++ b/en/l/lies.16986.wikitext
@@ -51,7 +51,7 @@ From {{inh|nl|dum|liesche}}. {{etystub|nl}}
 * {{audio|nl|Nl-lies.ogg|audio}}
 * {{hyphenation|nl|lies}}
 * {{rhymes|nl|is|s=1}}
-* {{homophone|nl|lease}}
+* {{homophone|nl|lease|Lies}}
 
 ===Noun===
 {{nl-noun|f|-zen|-}}
