--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -66,9 +66,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 * Burmese: {{t+|my|အန်}}
 * Catalan: {{t+|ca|vomitar}}
 * Cherokee: {{t|chr|ᏚᎦᏍᏗᎭ}}
-* Chinese:
-*: Cantonese: {{t|yue|嘔}}, {{t|yue|呕|tr=au2}}
-*: Mandarin: {{t+|cmn|嘔吐}}, {{t+|cmn|呕吐|tr=ǒutù}}, {{t+|cmn|嘔}}, {{t+|cmn|呕|tr=ǒu}}, {{t+|cmn|吐|tr=tù}}
+* Chinese: {{t+|cmn|嘔}}, {{t+|cmn|吐|tr=tù}}, {{t+|cmn|嘔吐}}
 * Czech: {{t+|cs|zvracet|impf}}
 * Dalmatian: {{t|dlm|gombro}}, {{t|dlm|gomituor}}
 * Danish: {{t+|da|brække sig}}, {{t+|da|kaste op}}
