/* Derived terms */ <cut#69589642>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -176,7 +176,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 |fussy cut
 |have one's work cut out for one
 |measure twice and cut once
-|trust everybody, but cut the cards|cut the baby in half|cut the cord|cut the crap|cut the Gordian knot|cut the ground from under someone's feet|cut the knot|cut the pigeon wing|you could cut the atmosphere with a knife|cut a dash|cut a feather|cut a swath|cut a wide swath
+|trust everybody, but cut the cards|cut the baby in half|cut the cord|cut the crap|cut the Gordian knot|cut the ground from under someone's feet|cut the knot|cut the pigeon wing|you could cut the atmosphere with a knife|cut a dash|cut a feather|cut a swath|cut a wide swath|words cut deep|cut no ice|[[cut some shapes]]|[[cut someone cold]]|[[cut someone dead]]|[[cut someone loose]]|[[cut someone slack]]|[[cut someone's comb]]|[[cut someone's throat]]|[[cut one's cloth to suit one's purse]]|[[cut one's eyeteeth]]|[[cut one's lucky]]|[[cut one's own throat]]|[[cut one's stick]]
 }}
 
 ====Translations====
