--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -606,11 +606,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 |Cut Bank
 |cutbank
 |offcut
-|pointcut
-}}
-
-====Related terms====
-{{rel2|en|title=Terms related to ''cut'' (adjective)|cut and dried|mad as a cut snake}}
+|pointcut|title=Terms related to ''cut'' (adjective)|cut and dried|mad as a cut snake|cut of the same cloth|cut out of the same cloth}}
 
 ====Translations====
 {{trans-top|having been cut}}
