--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -194,64 +194,82 @@ From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{
 =====Translations=====
 {{trans-top|soft foodstuff made from milk}}
 * Afrikaans: {{t+|af|botter}}
+* Ajië: {{t|aji|dibëë}}
 * Akkadian: {{t|akk|𒉌𒉣𒈾|tr=ḫimētu}}
 * Albanian: {{t+|sq|gjalpë|m}}
 * Alemannic German: {{t|gsw|Anke|m}}, {{t|gsw|Butter|m}}
 * Alutiiq: {{t|ems|masla}}
 * American Sign Language: {{t|ase|H@TipPalm-PalmDown-OpenB@CenterChesthigh-PalmUp Contact H@BasePalm H@TipPalm Contact H@BasePalm H@TipPalm Contact H@BasePalm}}
 * Amharic: {{t|am|ቅቤ}}
+* Antillean Creole: {{t|gcf|bè}}
 * Apache:
 *: Western Apache: {{t|apw|ibeʼ nestʼógi}}
 * Arabic: {{t|ar|زُبْدَة|f}}
 *: Egyptian Arabic: {{t|arz|زبدة|f|tr=zébda}}
 *: Gulf Arabic: {{t|afb|زبدة|tr=zibda}}
 *: Hijazi Arabic: {{t|acw|زبدة|f|tr=zibda, zubda}}
+*: South Levantine Arabic: {{t|ajp|زبدة|f|tr=zibda, zubda}}
 * Aragonese: {{t|an|manteca|f}}
-* Armenian: {{t+|hy|կարագ}}
+* Aramaic: {{t|arc|כרעא|m|sc=Hebr|tr=kaʽa}}
+* Armenian: {{t+|hy|կարագ}}, {{t|hy|կոգի}} {{q|archaic}}
+*: Old Armenian: {{t|xcl|կոգի}}, {{t|xcl|իւղ}}
 * Aromanian: {{t|rup|umtu|n}}
-* Assamese: {{t|as|মাখণ}}
+* Assamese: {{t|as|মাখণ}}, {{t|as|ননী}}
 * Asturian: {{t|ast|mantega|f}}
 * Azerbaijani: {{t+|az|yağ}}
-* Bashkir: {{t|ba|май|sc=Cyrl}}
+* Bashkir: {{t|ba|май}}
 * Basque: {{t+|eu|gurin}}
-* Bavarian: {{t|bar|Budda|m}}, {{t|bar|Budan|m}}
+* Bavarian: {{t|bar|Budda|m}}, {{t|bar|Budan|m}}; {{t|bar|Butta|m}} {{q|Vienna}}
 * Belarusian: {{t|be|ма́сла|n}}
 * Bengali: {{t|bn|মাখন}}
-* Breton: {{t+|br|amanenn|m}}
-* Bulgarian: {{t+|bg|масло́|n}}
+* Breton: {{t+|br|amanenn|m}}, {{t|br|amann|m}}
+* Bulgarian: {{t+|bg|масло|n}}
 * Burmese: {{t+|my|ထောပတ်}}
 * Buryat: {{t|bua|сагаан тоһон}}
 * Catalan: {{t+|ca|mantega|f}}
-* Chechen: {{t|ce|налха}}
+* Champenois: {{t|roa-cha|bure}} {{q|Auve}}
+* Chechen: {{t|ce|налха}}, {{t|ce|даьтта}}
 * Cherokee: {{t|chr|ᎪᏢᏅ}}, {{t|chr|ᎪᏢᏅᎢ}}
 * Cheyenne: {{t|chy|heóveamėške}}
 * Chinese:
 *: Cantonese: {{t|yue|牛油|tr=ngau4 jau4}}
 *: Hakka: {{t|hak|牛油|tr=ngiù-yù}}, {{t|hak|乳油|tr=nen-yù}}, {{t|hak|白塔|tr=pat-tá}}
 *: Mandarin: {{t+|cmn|黃油}}, {{t+|cmn|黄油|tr=huángyóu}}, {{t+|cmn|牛油|tr=niúyóu}}, {{t+|cmn|白脫}}, {{t+|cmn|白脱|tr=báituō}}
-*: Min Nan: {{t+|nan|牛油|tr=gû-iû}}, {{t|nan|bá-tah}} {{qualifier|Taiwan}}
+*: Min Nan: {{t+|nan|牛油|tr=gû-iû}}, {{t|nan|bá-tah}} {{q|Taiwan}}
 *: Wu: {{t|wuu|白脫}}, {{t|wuu|白脱|tr=baq tha}}, {{t|wuu|牛油|tr=nyieu hhieu}}
-* Classical Syriac: {{t|syc|ܚܐܘܬܐ|f|tr=ḥeˀwṯā|sc=Syrc}}
-* Coptic: {{t|cop|ϭⲉⲗⲓ}}
+* Chuvash: {{t|cv|ҫу}}
+* Classical Syriac: {{t|syc|ܚܐܘܬܐ|f|tr=ḥeˀwṯā|sc=Syrc}}, {{t|syc|ܟܪܥܐ|tr=kərāʿāʾ, kārʿāʾ, karʿāʾ|sc=Syrc}}
+* Coptic: {{t|cop|ϭⲉⲗⲓ}} {{q|Bohairic}}; {{t|cop|ⲥⲁⲓⲣⲉ}} {{q|Sahidic}}
 * Cornish: {{t|kw|amanyn|m}}
-* Corsican: {{t|co|butiru|m}}
+* Corsican: {{t|co|butiru|m}}, {{t|co|butirru|m}}
+* Crimean Tatar: {{t|crh|may}}, {{t|crh|yağ}}
+* Crow: {{t|cro|taláashiili}}
 * Czech: {{t+|cs|máslo|n}}
 * Dalmatian: {{t|dlm|butir|m}}
 * Danish: {{t+|da|smør|n}}
-* Dolgan: {{t|dlg|арыы}}
+* Dolgan: {{t|dlg|арыы|tr=arıı|sc=Cyrl}}
 * Dutch: {{t+|nl|boter|f}}
 * East Central German: {{t|gmw-ecg|Putter|f}} {{q|Silesian}}
+* Elfdalian: {{t|ovd|smyör|n}}
+* Emilian: {{t|egl|butér|m}} {{q|Modenese}}
 * Erzya: {{t|myv|ой|f}}
 * Esperanto: {{t+|eo|butero}}
 * Estonian: {{t+|et|või}}
 * Faroese: {{t|fo|smør|n}}
 * Fijian: {{t+|fj|bata}}
 * Finnish: {{t+|fi|voi}}
+* Forest Enets: {{t|enf|дюр}}
 * French: {{t+|fr|beurre|m}}
+* Frisian:
+*: North Frisian: {{t|frr|bööder}} {{q|Mooring}}
+*: Saterland Frisian: {{t|stq|Buutere|f}}
+*: West Frisian: {{t|fy|bûter|c}}
 * Friulian: {{t|fur|butîr}}
+* Fula: {{t|ff|nebbam}}
 * Galician: {{t+|gl|manteiga|f}}
+* Gamilaraay: {{t|kld|dhuuman}}
 * Georgian: {{t|ka|კარაქი}}
-* German: {{t+|de|Butter|f}}, {{t+|de|Anke|m}} {{qualifier|Switzerland}}
+* German: {{t+|de|Butter|f}}, {{t+|de|Anke|m}} {{q|Switzerland}}
 * Gottscheerish: {{t|gmw-gts|púttər|m|f|n}}
 * Greek: {{t+|el|βούτυρο|n}}
 *: Ancient: {{t|grc|βούτυρον|n}}
@@ -260,71 +278,114 @@ From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{
 * Gujarati: {{t+|gu|માખણ|n}}, {{t|gu|મસ્કો}}
 * Haitian Creole: {{t|ht|bè}}
 * Hausa: {{t|ha|man shanu}}
-* Hawaiian: {{t|haw|waiūpaka}}
+* Hawaiian: {{t|haw|waiūpaka}}, {{t|haw|paka}}
 * Hebrew: {{t+|he|חֶמְאָה|f|tr=khem'a}}
-* Hindi: {{t+|hi|घी|m}}, {{t+|hi|मक्खन|m}}, {{t+|hi|माखन}}, {{t+|hi|नवनी|f}}, {{t+|hi|नवनीत|m}}, {{t+|hi|नोनी|f}}, {{t+|hi|नैनू|m}}, {{t+|hi|मस्का|m}}
+* Hindi: {{t+|hi|घी|m}}, {{t+|hi|मक्खन|m}}, {{t+|hi|माखन}}, {{t+|hi|नवनी|f}}, {{t+|hi|नवनीत|m}}, {{t+|hi|नोनी|f}}, {{t+|hi|नैनू|m}}, {{t+|hi|मस्का|m}}, {{t+|hi|मसका|m}}
 * Hungarian: {{t+|hu|vaj}}
 * Hunsrik: {{t|hrx|Butter|f}}
-* Icelandic: {{t+|is|smjör|n}}
+* Icelandic: {{t+|is|smjör|n}}, {{t|is|butur|n}} {{q|obsolete}}
 * Ido: {{t+|io|butro}}
 * Indonesian: {{t+|id|mentega}}
 * Ingrian: {{t|izh|voi}}
+* Ingush: {{t|inh|налх}}, {{t|inh|даьтта}}
 * Interlingua: {{t+|ia|butyro}}
 * Irish: {{t+|ga|im|m}}
 *: Old Irish: {{t|sga|imb|n}}
-* Italian: {{t+|it|burro|m}}
+* Italian: {{t+|it|burro|m}}, {{t|it|butirro|m}} {{q|obsolete}}
 * Japanese: {{t+|ja|バター|tr=batā}}, {{t|ja|牛酪|tr=ぎゅうらく, gyūraku|sc=Jpan}}, {{t+|ja|乳酪|tr=にゅうらく, nyūraku}}
-* Javanese: {{t|jv|mertéga}}
+* Javanese:
+*: Javanese: {{t|jv|ꦩꦼꦂꦠꦺꦒ}}, {{t|jv|ꦩꦤ꧀ꦠꦺꦒ}} {{q|dialectal}}
+*: Latin: {{t|jv|mertéga}}, {{t|jv|mentéga}} {{q|dialectal}}
 * Jingpho: {{t|kac|htaw bat}}
+* Kachchi: {{t|kfr|મખણ}}
 * Kannada: {{t+|kn|ಬೆಣ್ಣೆ}}
+* Karelian: {{t|krl|voi}}
+* Kashubian: {{t|csb|masło|n}}
 * Kazakh: {{t|kk|май}}, {{t|kk|сармай}}, {{t|kk|сары май}}
+* Khanty: {{t|kca|вой}}
 * Khmer: {{t|km|បឺរ}}, {{t|km|ខ្លាញ់ទឹកដោះ}}
+* Komi-Permyak: {{t|koi|ви}}, {{t-check|koi|вый}}
+* Komi-Zyrian: {{t|kpv|вый}}
 * Konkani: {{t|kok|लोणी}}
 * Korean: {{t+|ko|버터}}
 * Kurdish:
 *: Central Kurdish: {{t+|ckb|کەرە}}
-*: Northern Kurdish: {{t|kmr|rûnê nivişk|m}}
+*: Northern Kurdish: {{t|kmr|rûnê nivişk|m}}, {{t|kmr|nivîşk}}, {{t|kmr|kere}}, {{t|kmr|rûn}}
 * Kyrgyz: {{t+|ky|май}}, {{t+|ky|сары май}}, {{t+|ky|сүт май}}, {{t+|ky|паста}}, {{t+|ky|повидло}}, {{t+|ky|май сүйкөө}}
+* Ladin: {{t|lld|smauz|m}}; {{t|lld|smaltz|n}} {{q|Luserna, Sette Comuni}}
+* Lakota: {{t|lkt|asáŋpi glí}}
 * Lao: {{t+|lo|ເບີ}}, {{t|lo|ເນີຍ}}
 * Latgalian: {{t|ltg|svīsts}}
-* Latin: {{t|la|butyrum}}
+* Latin: {{t|la|butyrum|alt=būtȳrum|n}}
 * Latvian: {{t|lv|sviests|m}}
+* Leonese: {{t|roa-leo|manteiga|f}}, {{t|roa-leo|untu|m}}
+* Ligurian: {{t|lij|bitiru|alt=bitìru|m}} {{q|Genoese}}; {{t|lij|bürru|m}} {{q|Monégasque}}
 * Limburgish: {{t+|li|bótter|m}}
 * Lithuanian: {{t|lt|sviestas|m}}
-* Lombard: {{t+|lmo|butter}}, {{t|lmo|büter}}; {{t+|lmo|burro}}; {{t+|lmo|buter|m}} {{qualifier|Western}}, {{t|lmo|boter|m}} {{qualifier|Eastern}}
+* Livonian: {{t|liv|vȭidag}}
+* Livvi: {{t|olo|voi}}
+* Lombard: {{t+|lmo|butter}}, {{t|lmo|büter}}; {{t+|lmo|burro}}; {{t+|lmo|buter|m}} {{q|Western}}, {{t|lmo|boter|m}} {{q|Eastern}}
 * Low German:
 *: Dutch Low Saxon: {{t+|nds-nl|botter|f}}
-*: German Low German: {{t+|nds-de|Botter|f}}
-{{trans-mid}}
+*: German Low German: {{t+|nds-de|Botter|f}}, {{t|nds-de|Bodder}} {{q|Mecklenburgisch}}, {{t|nds-de|Bueter}} {{q|Märkisch}}
+* Ludian: {{t|lud|voi}}
 * Luxembourgish: {{t+|lb|Botter|m}}
-* Macedonian: {{t|mk|путер|m}}
+* Macedonian: {{t|mk|путер|m}}, {{t|mk|маст|f}}
 * Malagasy: {{t+|mg|dibera}}
-* Malay: {{t+|ms|mentega}}
+* Malay:
+*: Jawi: {{t|ms|منتيݢ}}
+*: Rumi: {{t+|ms|mentega}}
 * Malayalam: {{t+|ml|വെണ്ണ}}
 * Maltese: {{t+|mt|butir}}
+* Mansi: {{t|mns|во̄й}}
 * Manx: {{t|gv|eeym|m}}
 * Maori: {{t+|mi|pata}}
+* Maranao: {{t|mrw|mantikiliya}}
 * Marathi: {{t|mr|माखण|n}}, {{t|mr|लोणी|n}}
+{{trans-mid}}
 * Mari:
 *: Eastern Mari: {{t|chm|ӱй}}
 *: Western Mari: {{t|mrj|ӱ}}
-* Mirandese: {{t-needed|mwl}}
+* Marshallese: {{t|mh|bōta}}
+* Mauritian Creole: {{t|mfe|diber}}
+* Middle Breton: {{t|xbm|amanen}}
+* Middle Dutch: {{t|dum|boter|alt=bōter|m|f}}
+* Middle French: {{t|frm|burre}}
+* Middle High German: {{t|gmh|anke}}
+* Middle Low German: {{t|gml|botter}}
+* Middle Welsh: {{t|wlm|ymenyn}}
+* Mirandese: {{t|mwl|manteiga|f}}
 * Mohawk: {{t|moh|owistóhseraʼ}}
+* Moksha: {{t|mdf|вай}}
 * Mon: {{t+|mnw|ထဝ်ဗာတ်}}
-* Mongolian: {{t|mn|цөцгийн тос}}, {{t+|mn|масло}}
+* Mongolian:
+*: Cyrillic: {{t|mn|цөцгийн тос}}, {{t|mn|тос}}, {{t+|mn|масло}}
+*: Mongolian: {{t|mn|ᠴᠥᠴᠦᠭᠡᠢ ᠶᠢᠨ ᠲᠣᠰᠤ}}, {{t|mn|ᠲᠣᠰᠤ}}
+* Nahuatl:
+*: Central Huasteca Nahuatl: {{t|nch|chichiualayotl}}
+*: Central Nahuatl: {{t|nhn|chichihualayotl}} {{q|Amecameca}}
+*: Eastern Huasteca Nahuatl: {{t|nhe|tlachiacayotl}}
 * Navajo: {{t|nv|mandagíiya}}
 * Neapolitan: {{t|nap|butirro}}
 * Nepali: {{t|ne|नौनी}}, {{t|ne|मक्खन}}
-* Norman: {{t|nrf|beurre|m}} {{qualifier|Jersey}}, {{t|nrf|burre|m}} {{qualifier|Guernsey}}, {{t|nrf|buure|m}} {{qualifier|continental Norman}}, {{t|nrf|bür|m}} {{qualifier|Sark}}
+* Nganasan: {{t|nio|люоˮсадир}}
+* Norman: {{t|nrf|beurre|m}} {{q|Jersey}}, {{t|nrf|burre|m}} {{q|Guernsey}}, {{t|nrf|buure|m}} {{q|continental Norman}}, {{t|nrf|bür|m}} {{q|Sark}}
 * North Frisian: {{t|frr|bööder}}
 * Norwegian:
 *: Bokmål: {{t+|nb|smør|n}}
 *: Nynorsk: {{t|nn|smør|n}}
 * Occitan: {{t+|oc|burre|m}}, {{t+|oc|bodre|m}}
-* Ojibwe: {{t|oj|ozaawi-bimide}}
+* Ojibwe: {{t|oj|ozaawi-bimide}}, {{t|oj|bimide}}
+* Okanagan: {{t|oka|kmiƛ'mn}}
 * Old Church Slavonic: {{t|cu|масло|n|sc=Cyrs}}
+* Old Cornish: {{t|oco|amanen}}
 * Old East Slavic: {{t|orv|масло|n}}
 * Old English: {{t|ang|butere|f}}
+* Old French: {{t|fro|bure|m}}, {{t|fro|burre|m}}
+* Old Frisian: {{t|ofs|butera}}
+* Old High German: {{t|goh|ancho|m}}, {{t|goh|anco|m}}, {{t|goh|ankspint}}, {{t|goh|butera}}
+* Old Spanish: {{t|osp|butiro|m}}, {{t|osp|buturo|m}}
+* Orok: {{t|oaa|simuksä}}
 * Oromo: {{t|om|dhadhaa}}
 * Osage: {{t|osa|paazénii wéli}}
 * Ossetian: {{t|os|нӕлхӕ}}
@@ -332,6 +393,7 @@ From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{
 * Pashto: {{t+|ps|کوچ|m|tr=kuč}}
 * Pennsylvania German: {{t|pdc|Budder|m}}
 * Persian: {{t+|fa|کره|tr=kare}}, {{t+|fa|مسکه|tr=maske|sc=fa-Arab}}
+* Piedmontese: {{t|pms|bur|m}}, {{t|pms|butir|m}}
 * Plautdietsch: {{t+|pdt|Botta|f}}
 * Polish: {{t+|pl|masło|n}}
 * Portuguese: {{t+|pt|manteiga|f}}
@@ -342,69 +404,98 @@ From {{inh|en|enm|buter}}, {{m|enm|butter}}, from {{inh|en|ang|butere}}, from {{
 * Romansch: {{t|rm|paintg|m}}
 * Russian: {{t+|ru|ма́сло|n}}, {{t+|ru|сли́вочное ма́сло|n}}
 * Rwanda-Rundi: {{t|rw|amavuta}}, {{t|rw|ama-vuta}}
+* S'gaw Karen: {{t|ksw|ထီပး}}, {{t|ksw|ဝံၣ်သိစီ}}
 * Sami:
+*: Inari: {{t|smn|vuoj̣â}}
+*: Kildin: {{t|sjd|вӯйй}}
+*: Lule: {{t|smj|vuodja}}
 *: Northern: {{t|se|vuodja}}
+*: Pite: {{t|sje|vuodja}}, {{t|sje|vuojja}}
 *: Skolt: {{t|sms|vuõjj}}
+*: Southern: {{t|sma|voeje}}
 *: Ter: {{t|sjt|vɨjj}}
+*: Ume: {{t|sju|vuajja}}
 * Samoan: {{t+|sm|pata}}
 * Samogitian: {{t|sgs|svėists|m}}
 * Sanskrit: {{t+|sa|नवनीत}}, {{t+|sa|घृत|n}}
 * Sardinian: {{t|sc|butiru|m}}
-* Saterland Frisian: {{t|stq|Buutere|f}}
 * Scots: {{t|sco|butter}}, {{t|sco|buter}}
 * Scottish Gaelic: {{t|gd|ìm|m}}
+* Selkup: {{t|sel|ӱр}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|маслац|m}}, {{t|sh|путер|m}}
-*: Roman: {{t+|sh|maslac|m}}, {{t+|sh|puter|m}}
+*: Cyrillic: {{t|sh|маслац|alt=ма̏слац|m}}, {{t|sh|путер|alt=пу̏тер|m}}
+*: Roman: {{t+|sh|maslac|alt=mȁslac|m}}, {{t+|sh|puter|alt=pȕter|m}}
+* Seychellois Creole: {{t|crs|diber}}
 * Shan: {{t|shn|ထေႃးပၢတ်ႈ}}
-* Sicilian: {{t|scn|butirru}}
-* Sindhi: {{t|sd|مکڻ|tr=makhanu}}; (molten) {{t|sd|گيہہ|m|tr=gīhu|alt=گيِہہُ|sc=sd-Arab}}
+* Sicilian: {{t|scn|butirru|m}}
+* Sidamo: {{t|sid|buuro}}
+* Silesian: {{t|szl|masło|n}}
+* Sindhi: {{t|sd|مکڻ|tr=makhanu}}; {{q|molten}} {{t|sd|گيہہ|m|tr=gīhu|alt=گيِہہُ|sc=sd-Arab}}
 * Sinhalese: {{t|si|බටර්}}
 * Slovak: {{t+|sk|maslo|n}}
-* Slovene: {{t+|sl|maslo|n}}, {{t|sl|puter|m}} {{qualifier|colloquial}}
+* Slovene: {{t+|sl|maslo|n}}, {{t|sl|puter|m}} {{q|colloquial}}
 * Somali: {{t|so|subag|m}}
 * Sorbian:
-*: Lower Sorbian: {{t|dsb|butra|f}}
-*: Upper Sorbian: {{t-needed|hsb}}
+*: Lower Sorbian: {{t|dsb|butra|f}}, {{t|dsb|masło|n}} {{q|rare}}
+*: Upper Sorbian: {{t|hsb|butra|f}}
 * Sotho: {{t+|st|sereledi}}
-* Southern Altai: {{t|alt|сармай}}, {{t|alt|сары май}}, {{t|alt|сарју}}, {{t|alt|сары јуу}}
-* Spanish: {{t+|es|mantequilla|f}}, {{t+|es|manteca|f}} {{qualifier|Argentina, Paraguay, Uruguay}}
+* Southern Altai: {{t|alt|сармай}}, {{t|alt|сары май}}, {{t|alt|май}}, {{t|alt|сарју}}, {{t|alt|сары јуу}}
+* Spanish: {{t+|es|mantequilla|f}}, {{t+|es|manteca|f}} {{q|Argentina, Paraguay, Uruguay}}
+* Sranan Tongo: {{t|srn|botro}}
+* Sumerian: {{t|sux|𒉌|tr=i₃, ia₃}}
+* Sundanese: {{t|su|ᮙᮔ᮪ᮒᮦᮌ}}
 * Swahili: {{t+|sw|siagi}}
+* Swazi: {{t|ss|libhotela|c5}}
 * Swedish: {{t+|sv|smör|n}}
 * Tagalog: {{t|tl|mantikilya}}
 * Tajik: {{t+|tg|равған}}, {{t|tg|равғани зард}}
-* Tamil: {{t+|ta|வெண்ணெய்}}
+* Tamil: {{t+|ta|வெண்ணெய்}}, {{t+|ta|இழுது}}, {{t+|ta|விழுது}}
+* Tarantino: {{t|roa-tar|burre}}
 * Tatar: {{t+|tt|май}}
 * Telugu: {{t+|te|వెన్న}}
 * Tetum: {{t|tet|manteiga}}
 * Thai: {{t+|th|เนย}}
-* Tibetan: {{t|bo|མར།}}, {{t|bo|གསོལ་མར}} {{qualifier|honorific}}
+* Tibetan: {{t|bo|མར།}}, {{t|bo|གསོལ་མར}} {{q|honorific}}
+* Tigre: {{t|tig|ዝበድ}}
 * Tocharian B: {{t|txb|kewiye}}
 * Tok Pisin: {{t|tpi|bata}}
-* Turkish: {{t+|tr|tereyağı}}
+* Tundra Nenets: {{t|yrk|юрˮ}}
+* Turkish: {{t+|tr|tereyağı}}, {{t|tr|yağ}} {{q|obsolete}}
 * Turkmen: {{t|tk|mesge}}
+* Tuvan: {{t|tyv|саржаг}}, {{t|tyv|үс}}
 * Udi: {{t|udi|кӏаракӏ}}
+* Udmurt: {{t|udm|вӧй}}
+* Ugaritic: {{t|uga|𐎃𐎎𐎀𐎚|tr=ḫmảt}}
 * Ukrainian: {{t|uk|ма́сло|n}}
-* Urdu: {{t|ur|گھی|tr=ghī}}, {{t|ur|مکھن|tr=makkhan}}
+* Unami: {{t|unm|putël|in}}
+* Urdu: {{t|ur|گھی|tr=ghī}}, {{t|ur|مکھن|tr=makkhan}}, {{t|ur|نونی|tr=navanī}}, {{t|ur|نونیت|tr=navanīt}}
 * Uyghur: {{t|ug|سېرىق ماي}}
-* Uzbek: {{t+|uz|saryogʻ}}
+* Uzbek:
+*: Cyrillic: {{t+|uz|сарёғ}}, {{t|uz|мой}}
+*: Latin: {{t+|uz|saryogʻ}}, {{t+|uz|moy}}
 * Venetian: {{t+|vec|butiro|m}}, {{t|vec|botiro|m}}
+* Veps: {{t|vep|voi}}
 * Vietnamese: {{t+|vi|bơ}}
 * Vilamovian: {{t|wym|putter|f}}
-* Volapük: {{t+|vo|bör}}, {{t|vo|mileg}} {{qualifier|older term}}
+* Volapük: {{t+|vo|bör}}, {{t|vo|mileg}} {{q|older term}}
 * Votic: {{t|vot|või}}
+* Võro: {{t|vro|võid}}
 * Walloon: {{t+|wa|boure|m}}
 * Waray-Waray: {{t|war|mantikilya}}
 * Welsh: {{t+|cy|menyn|m}}
 * West Flemish: {{t|vls|beuter|m}}
-* West Frisian: {{t|fy|bûter|c}}
+* Western Apache: {{t|apw|ibeʼ nestʼógi}}
 * Wolof: {{t|wo|bóor}}, {{t+|wo|diw}}
 * Xârâcùù: {{t|ane|dibèè}}
+* Xhosa: {{t|xh|ibhotolo|c9}}
 * Yakut: {{t|sah|арыы}}
 * Yiddish: {{t|yi|פּוטער|f}}
 * Yola: {{t|yol|buthther}}
+* Yoruba: {{t|yo|bọta|alt=bọ́tà}}, {{t|yo|ori|alt=òrí}}
 * Yup'ik: {{t|esu|masslaaq}}
-* Zulu: {{t+|zu|ibhotela|c5}}
+* Zealandic: {{t|zea|beuter}}
+* Zhuang: {{t|za|naijyouz}}
+* Zulu: {{t+|zu|ibhotela|alt=îbhotêla|c5}}
 {{trans-bottom}}
 
 {{trans-top|other foodstuffs like butter}}
