t+bn:[[ইয়ানে]] ([[WT:EDIT|Assisted]]) <i.e.#69594462>

--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -36,6 +36,7 @@ From {{uder|en|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 * Azerbaijani: {{t+|az|yəni}}
 * Bashkir: {{t|ba|йәғни|sc=Cyrl}}
 * Belarusian: {{t|be|гэ́та зна́чыць}}, {{t|be|г. зн.}}
+* Bengali: {{t|bn|ইয়ানে}}
 * Bulgarian: {{t|bg|т.е.}}, {{t+|bg|то́ест}}
 * Catalan: {{t|ca|és a dir}}, {{t+|ca|això és}}
 * Chinese:
