--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -341,7 +341,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Hungarian: {{t+|hu|lelet}}
 * Icelandic: {{t+|is|fundur|m}}
 {{trans-mid}}
-* Italian: {{t+|it|scoperta|f}}, {{t+|it|chicca|f}}
+* Italian: {{t+|it|scoperta|f}}, {{t+|it|chicca|f}}, {{t|it|scovamento|m}}
 * Latin: {{t+|la|inventus|m}}
 * Macedonian: {{t|mk|наод|m|sc=Cyrl}}
 * Norwegian: {{t|no|funn|n}}
