--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -707,7 +707,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 #: {{ux|en|a '''cut''' for a railroad}}
 #* {{RQ:Knolles Turkes}}
 #*: which great '''cut''' or ditch Sesostris {{...}} purposed to have made a great deale wider and deeper.
-## An artificial [[navigation]] [[channel]] as distinguished from a [[navigable]] [[river]]
+## An artificial [[navigation]] [[channel]] as distinguished from a [[navigable]] [[river]].
 # A [[share]] or [[portion]] of [[profit]]s.
 #: {{ux|en|The bank robbers disbanded after everyone got their '''cut''' of the money.}}
 #* {{quote-journal|en|journal=Time|title=Inside Epic's Unreal Engine 5|author=Andrew R. Chow|date=April 6 2022
@@ -720,9 +720,10 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 # {{lb|en|cricket}} [[sideways|Sideways]] [[movement]] of the ball through the [[air]] caused by a [[fast bowler]] [[impart]]ing [[spin]] to the ball.
 # {{lb|en|sports}} In [[lawn tennis]], etc., a slanting stroke causing the ball to spin and bound irregularly; also, the spin thus given to the ball.
 # {{lb|en|golf}} In a strokeplay competition, the early elimination of those players who have not then attained a preannounced score, so that the rest of the competition is less pressed for time and more entertaining for spectators.
-# {{lb|en|theatre}} A passage omitted or to be omitted from a play.
+# {{lb|en|especially|theatre|cinema}} A passage omitted or to be omitted from a play, movie script, speech, etc.
 #: {{ux|en|The [[director]] asked the [[cast]] to note down the following '''cuts'''.}}
 # {{lb|en|cinema}} A particular version or [[edit]] of a film.
+#: ''the director's '''cut'''''
 # {{lb|en|card games}} The act or right of dividing a deck of playing cards.
 #: {{ux|en|The player next to the dealer makes a '''cut''' by placing the bottom half on top.}}
 # {{lb|en|card games}} The card obtained by dividing the pack.
@@ -759,10 +760,16 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 #: {{ux|en|Don't buy his coke: it's full of '''cut'''.}}
 # {{lb|en|fashion}} A notch shaved into an eyebrow.
 # {{lb|en|bodybuilding}} A time period when one tries to lose fat while retaining muscle mass.
-# {{lb|en|slang}} A hidden or secure place.
+# {{senseid|en|place}} {{lb|en|slang}} A hidden, secluded{{,}} or secure place.
 #* {{quote-song|en |date=September 22, 1992 |title=Guerillas in tha Mist |author={{w|Da Lench Mob}} |album={{w|Guerillas in tha Mist}} |note=track 6 |url=https://genius.com/Da-lench-mob-guerillas-in-tha-mist-lyrics |text=I'm laying in a '''cut''' 'bout to shoot me a mutt}}
 #* {{quote-av|en|date=March 9, 2008|title={{w|The Wire}}|episode=[[w:-30-_(The_Wire)|-30-]]|season=5|number=10|time=|actor=Anwan Glover|role=Slim Charles|text=You don't mind me askin', why you want to sell? I mean, even from inside here, you can take a slice for just layin' in the '''cut'''.|writer={{w|David Simon}}|medium=television production|network=HBO}}
 #* {{quote-song|en|date=April 14, 2010|author={{w|Wiz Khalifa}}|authorlabel=no|title=In the '''Cut'''|url=https://genius.com/41741|album=Kush & Orange Juice|text=In the '''cut''', in the '''cut''', rolling doobies up}}
+#* '''2012''', Honey Cocaine, "In The Cut":
+#*: Bitch I'm out, catch me chillin' '''in the cut'''. Me and my homies swag it out '''in the cut'''. It's a party going down '''in the cut'''.
+#* '''2016''', Drake, "Summer Sixteen":
+#*: Famous as fuck, but I’m still '''in the cut''' when they round up the troops.
+#* '''2021''', Redferrin, "Stuck":
+#*: She got me stuck. Like a truck, deep mud, deep ruts, way out in the '''cut'''. She got me stuck. Even four-wheel drive won't work this time, yeah.
 # {{lb|en|chemical engineering|petrochemistry}} The range of [[temperature]]s used to [[distill]] a particular [[mixture]] of [[hydrocarbon]]s from [[crude oil]].
 
 ====Derived terms====
