--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -606,7 +606,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 |Cut Bank
 |cutbank
 |offcut
-|pointcut|title=Terms related to ''cut'' (adjective)|cut and dried|mad as a cut snake|cut of the same cloth|cut out of the same cloth|baby-cut|boy-cut|clean-cut|clear cut|closed-cut valley|cut autograph|cut splice|English-cut|steak-cut|straight-cut|tavern-cut|V-cutf|rose-cut|cut-price|cut-rate}}
+|pointcut|title=Terms related to ''cut'' (adjective)|cut and dried|mad as a cut snake|cut of the same cloth|cut out of the same cloth|baby-cut|boy-cut|clean-cut|clear cut|closed-cut valley|cut autograph|cut splice|English-cut|steak-cut|straight-cut|tavern-cut|V-cutf|rose-cut|cut-price|cut-rate|cut glass|cut lunch|cut nail|cut sig|cut signature}}
 
 ====Translations====
 {{trans-top|having been cut}}
