--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -127,7 +127,7 @@ Adjective sense of "drunk" (now rare and now usually used in the originally jocu
 }}
 
 {{der4|en|title=multiword phrases
-|cut stick|cut bait
+|cut stick|cut bait|cut and come again
 |[[cut and cover]], [[cut-and-cover]]
 |cutting edge
 |cut a caper
