--- a/en/傑/傑.11170.wikitext
+++ b/en/傑/傑.11170.wikitext
@@ -89,9 +89,10 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|걸}}
+{{ko-hanja|호걸|호걸|걸}}
 
-# {{rfdef|ko|sort=人10}}
+# {{hanja form of|걸|[[hero]]}}
+# {{hanja form of|걸|[[remarkable]], [[outstanding]]}}
 
 ----
 
