t+scn:[[punti]] ([[WT:EDIT|Assisted]]) <bridge#69655523>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -375,7 +375,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 *: Cyrillic: {{tt|sh|мо̑ст|m}}, {{tt|sh|ћу̀прија|f}} {{qualifier|archaic, poetic}}
 *: Roman: {{tt+|sh|mȏst|m}}, {{tt+|sh|ćùprija|f}} {{qualifier|archaic, poetic}}
 * Shan: {{t-needed|shn}}
-* Sicilian: {{tt+|scn|ponti}}
+* Sicilian: {{tt+|scn|ponti}}, {{t|scn|punti}}
 * Sindhi: {{tt|sd|پل|tr=puli|alt=پُلِ}}
 * Sinhalese: {{tt|si|පාලම}}
 * Skolt Sami: {{tt|sms|mostt}}
