--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -48,7 +48,7 @@ Noun from {{inh|en|enm|pul}}, {{m|enm|pull}}, {{m|enm|pulle}}, from the verb {{m
 # {{lb|en|transitive|informal}} To [[do]] or [[perform]].
 #: {{ux|en|He regularly '''pulls''' 12-hour days, sometimes 14.}}
 #: {{ux|en|You'll be sent home if you '''pull''' another stunt like that.}}
-#* {{quote-video game|en|year=1995|developer=[[w:HAL Laboratory|HAL Laboratory]]|publisher={{w|Nintendo}}|title={{w|EarthBound}}|platform={{w|Super Nintendo Entertainment System}}|text=What are you trying to '''pull''', anyway? You say you want to sell, but you have nothing to offer?! You've got some nerve, kid!}}
+#* {{quote-video game|en|year=1995|developer={{w|HAL Laboratory}}|publisher={{w|Nintendo}}|title={{w|EarthBound}}|platform={{w|Super Nintendo Entertainment System}}|text=What are you trying to '''pull''', anyway? You say you want to sell, but you have nothing to offer?! You've got some nerve, kid!}}
 #* {{quote-av|en|author=Drachinifel|title=The Battle of Samar - Odds? What are those?|date=27 February 2019|url=https://www.youtube.com/watch?v=4AdcvDiA3lE|archiveurl=https://web.archive.org/web/20221103043318/https://www.youtube.com/watch?v=4AdcvDiA3lE|archivedate=3 November 2022|accessdate=5 November 2022|time=16:22|text=Faced with an enemy whose largest gun turrets weigh more than the entire ship, ''Johnston'' decides that running is boring, and instead '''pulls''' a full 180-degree turn and charges straight back at the attacking forces.}}
 # {{senseid|en|get one over or emulate}} {{lb|en|with 'a' and the name of a person, place, event, etc.}} To [[copy]] or [[emulate]] the actions or [[behaviour]] that is associated with the person or thing mentioned.
 #: {{ux|en|He '''pulled''' an Elvis and got really fat.}}
