--- a/en/坼/坼.13055.wikitext
+++ b/en/坼/坼.13055.wikitext
@@ -35,7 +35,7 @@
 # {{zh-o}} to [[sprout]]; to [[blossom]]
 
 ===Compounds===
-{{zh-der|天崩地坼|地坼天崩|剖心坼肝|龜坼|坼副|坼裂|坼兆|山崩地坼}}
+{{zh-der|天崩地坼|地坼天崩|剖心坼肝|龜坼|坼副|坼裂|坼兆|山崩地坼|爆坼}}
 
 ----
 
