--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -53,6 +53,7 @@ Cognate with {{cog|stq|flotje|t=to float}}, {{cog|fy|flotsje|t=to float}}, {{cog
 # {{lb|en|transitive|colloquial}} To [[extend]] a [[short-term]] [[loan]] to.
 #: {{ux|en|Could you '''float''' me $50 until payday?}}
 # {{lb|en|transitive|finance}} To [[issue]] or [[sell]] [[share]]s in a [[company]] (or [[unit]]s in a [[trust]]) to members of the [[public]], followed by [[listing]] on a [[stock exchange]].
+#* {{quote-book|1=en|year=1887|author=Harriet W. Daly|title=Digging, Squatting, and Pioneering Life in the Northern Territory of South Australia|page=210|passage="Peg out a claim wherever you like and we will '''float''' it," was the substance of many a code of instructions sent by unprincipled men in the mining world of the colonies to the gold prospectors in Port Darwin.}}
 #* '''2005''' June 21, Dewi Cooke, ''{{w|The Age}}'' [http://www.theage.com.au/news/business/shoemaker-strides-for-world-domination/2005/06/20/1119250927926.html?from=moreStories],
 #*: He [Mario Moretti Polegato] '''floated''' the company on the Milan Stock Exchange last December and sold 29 per cent of its shares, mostly to American investors.
 #* '''2007''', Jonathan Reuvid, '''''Floating''' Your Company: The Essential Guide to Going Public''.
