--- a/en/傑/傑.11170.wikitext
+++ b/en/傑/傑.11170.wikitext
@@ -17,6 +17,9 @@
 {{Han etym}}
 {{Han compound|桀|亻|c1=p|c2=s|t2=person|ls=psc}}.
 
+===Etymology===
+Same word as {{zh-ref|桀}} ({{zh-ref|Schuessler, 2007}}). See there for etymology.
+
 ===Pronunciation===
 {{zh-pron
 |m=jié
