--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -198,6 +198,7 @@ From {{der|ko|ltc|-}} {{ltc-l|意|id=1}}.
 * [[意表]] ([[의표]], uipyo) [[surprise]]
 * [[意向]] ([[의향]], uihyang) [[willing]]ness, [[inclination]], [[view]]
 * [[表意]] ([[표의]], pyoui) [[ideographic]] or [[semantic]] (in contrast to [[phonetic]]) [[representation]]. cf. [[表音]] ([[표음]], ''pyoeum'')
+* [[意見]] ([[의견]], uikeon) [[opinion]]
 {{der-bottom}}
 
 ====See also====
