--- a/en/慄/慄.15703.wikitext
+++ b/en/慄/慄.15703.wikitext
@@ -86,6 +86,6 @@ This character is not used much in modern Japanese.
 ===Han character===
 {{vi-readings|reading=lật|rs=心10}}
 
-# {{rfdef|vi|sort=心10}}
+# translates as Lật or Rất which modifies adjectives or adverbs to mean very or extremely
 
 [[Category:CJKV simplified characters which already existed as traditional characters|心栗]]
