--- a/en/偽/偽.11149.wikitext
+++ b/en/偽/偽.11149.wikitext
@@ -39,11 +39,12 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# [[false]]; [[counterfeit]]; [[bogus]]; [[fake]]; [[pseudo-]]
+# [[false]]; [[counterfeit]]; [[bogus]]; [[fake]]; [[pseudo-]]; [[artificial]]
 #: {{zh-x|虛偽|hypocritical; hypocrisy}}
 #: {{zh-x|偽造|to forge; to counterfeit}}
 #: {{zh-x|偽鈔|counterfeit banknote}}
 #: {{zh-x|偽麻黃鹼|'''pseudo'''ephedrine}}
+#: {{zh-x|人 之 性 惡，其 善 者 偽 也。|Man's nature is bad ; his goodness is '''artificial'''.|ref=Xunzi}}
 # [[falsehood]]; [[untruthfulness]]
 # [[illegal]]; [[illegitimate]]
 #: {{zh-x|偽政權|puppet government}}
