/* Translations */ <United States of America#69831715>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -47,7 +47,7 @@
 * Abkhaz: {{t|ab|Америка Еиду Аштатқәа}}, {{t|ab|Америка}}
 * Adyghe: {{t|ady|Америкэ Штат Зэхэтхэр}}
 * Afrikaans: {{t|af|Verenigde State van Amerika}}, {{t+|af|Amerika}}
-* Albanian: {{t|sq|Shtete e Bashkuara të Amerikës}}, {{t|sq|Amerikë|f}}
+* Albanian: {{t|sq|Shtete e Bashkuara të Amerikës|m-p}}, {{t+|sq|Shtetet e Bashkuara të Amerikës|m-p}} {{q|definite}}, {{t|sq|Shtete e Bashkuara|m-p}}, {{t|sq|Shtetet e Bashkuara|m-p}} {{q|definite}}, {{t|sq|SHBA|m-p}}, {{t|sq|Amerikë|f}}, {{t+|sq|Amerika|f}} {{q|definite}}
 * Amharic: {{t|am|የተባበሩት የአሜሪካ ግዛቶች}}
 * Arabic: {{t+|ar|الْوِلَايَاتُ الْمُتَّحِدَةُ الْأَمْرِيكِيَّة|f-p}}, {{t+|ar|الْوِلَايَاتُ الْمُتَّحِدَة|f-p}}, {{t+|ar|أَمْرِيكَا|f}}
 * Aramaic:
@@ -71,12 +71,12 @@
 * Chechen: {{t|ce|Американ Цхьанакхетта Штаташ}}, {{t|ce|Америка}}
 * Cherokee: {{t|chr|ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ ᎾᎿ ᎠᎺᏰᏟ}}, {{t|chr|ᎠᎹᏰᏟ}}
 * Chinese:
-*: Cantonese: {{t|yue|美利堅合眾國|sc=Hani}}, {{t|yue|美利坚合众国|tr=mei5 lei3 gin1 hap6 zong3 gwok3|sc=Hani}}, {{t+|yue|美國|sc=Hani}}, {{t+|yue|美国|tr=mei5 gwok3|sc=Hani}}, {{t+|yue|美|tr=mei5|sc=Hani}}
+*: Cantonese: {{t|yue|美利堅合眾國}}, {{t|yue|美利坚合众国|tr=mei5 lei3 gin1 hap6 zong3 gwok3}}, {{t+|yue|美國}}, {{t+|yue|美国|tr=mei5 gwok3}}, {{t+|yue|美|tr=mei5}}
 *: Dungan: {{t|dng|Мыйгуй}}, {{t|dng|Мыйгуә}}
 *: Hakka: {{t|hak|美國}}, {{t|hak|美国|tr=Mî-koet}}
-*: Mandarin: {{t+|cmn|美利堅合眾國|sc=Hani}}, {{t+|cmn|美利坚合众国|tr=Měilìjiān hézhòngguó|sc=Hani}}, {{t+|cmn|美國|sc=Hani}}, {{t+|cmn|美国|tr=Měiguó|sc=Hani}}, {{t+|cmn|美|tr=Měi-|sc=Hani}}
+*: Mandarin: {{t+|cmn|美利堅合眾國}}, {{t+|cmn|美利坚合众国|tr=Měilìjiān hézhòngguó}}, {{t+|cmn|美國}}, {{t+|cmn|美国|tr=Měiguó}}, {{t+|cmn|美|tr=Měi-}}
 *: Min Dong: {{t|cdo|美國}}, {{t|cdo|美国|tr=Mī-guók}}
-*: Min Nan: {{t|nan|美國|sc=Hani}}, {{t|nan|美国|tr=Bí-kok|sc=Hani}}, {{t|nan|米國|sc=Hani}}, {{t+|nan|米国|tr=Bí-kok|sc=Hani}}
+*: Min Nan: {{t|nan|美國}}, {{t|nan|美国|tr=Bí-kok}}, {{t|nan|米國}}, {{t+|nan|米国|tr=Bí-kok}}
 *: Wu: {{t|wuu|美國}}, {{t|wuu|美国|tr='me koq}}
 * Chuvash: {{t|cv|Америкӑри Пӗрлешӳллӗ Штатсем}}
 * Coptic: {{t|cop|ⲣⲉⲑⲱⲟⲩ ⲉⲧⲧⲟⲙⲓ `ⲛⲧⲉ ⲁⲙⲉⲣⲓⲕⲏ}}
@@ -84,9 +84,9 @@
 * Corsican: {{t|co|Stati Uniti d'America|m-p}}, {{t|co|Stati Uniti|m-p}}
 * Crimean Tatar: {{t|crh|Amerika Qoşma Ştatları|p}}
 * Czech: {{t+|cs|Spojené státy americké|m-p}}, {{t+|cs|Spojené státy|m-p}}, {{t+|cs|Amerika|f}}
-* Danish: {{t|da|Amerikas Forenede Stater}}, {{t|da|Forenede Stater}}, {{t+|da|Amerika}}
+* Danish: {{t|da|Amerikas Forenede Stater|c-p}}, {{t|da|Forenede Stater|c-p}}, {{t+|da|Amerika|n}}
 * Dhivehi: {{t|dv|ޔުނައިޓެޑް ސްޓޭޓްސް އޮފް އެމެރިކާ}}, {{t|dv|އެމެރިކާ}}
-* Dutch: {{t+|nl|Verenigde Staten van Amerika|f-p}}, {{t+|nl|Verenigde Staten}}, {{t+|nl|Amerika|n}}
+* Dutch: {{t+|nl|Verenigde Staten van Amerika|m-p}}, {{t+|nl|Verenigde Staten|m-p}}, {{t+|nl|Amerika|n}}
 * Dzongkha: {{t|dz|ཡུ་ནའིཊེཊ་སི་ཊེས}}
 * Eastern Keres: {{t|kee|'Amelika-hui-pu-'ia}}
 * Erzya: {{t|myv|Американь Вейтьсэндявкс Штаттнэ}}
@@ -108,7 +108,7 @@
 * Hawaiian: {{t|haw|ʻAmelika Huipūʻia}}, {{t|haw|ʻAmelika Hui}}
 * Hebrew: {{t|he|אַרְצוֹת הַבְּרִית שֶׁל אָמֶרִיקָה|tr=artsot ha-brit shel amérika}}, {{t+|he|אַרְצוֹת הַבְּרִית|f-p|tr=artsot ha-brit}}, {{t|he|ארה״ב|tr=arh"b}}, {{t+|he|אָמֶרִיקָה|f|tr=amérika}}
 * Hiligaynon: {{t-needed|hil}}
-* Hindi: {{t|hi|संयुक्त राज्य अमरीका}}, {{t|hi|संयुक्त राष्ट्र अमरीका}}, {{t+|hi|अमेरिका|m}}, {{t+|hi|अमरीका|m}}
+* Hindi: {{t|hi|संयुक्त राज्य अमरीका|m}}, {{t|hi|संयुक्त राष्ट्र अमरीका|m}}, {{t+|hi|अमेरिका|m}}, {{t+|hi|अमरीका|m}}
 * Hungarian: {{t+|hu|Amerikai Egyesült Államok}}, {{t+|hu|Egyesült Államok}}, {{t+|hu|Amerika}}
 * Icelandic: {{t+|is|Bandaríkin|n-p}}, {{t|is|Bandaríki Norður-Ameríku}}, {{t+|is|Ameríka|f}}
 * Ido: {{t|io|Unionita Stati di Amerika}}, {{t+|io|Usa}}
@@ -141,7 +141,7 @@
 * Laz: {{t-needed|lzz}}
 * Lezgi: {{t|lez|Америкадин Садхьанвай Штатар|p}}
 * Lithuanian: {{t+|lt|Jungtinės Amerikos Valstijos}}, {{t+|lt|Amerika|f}}
-* Macedonian: {{t+|mk|Соеди́нети Амери́кански Др́жави|f-p}}, {{t+|mk|Америка|f}}
+* Macedonian: {{t+|mk|Соединети Американски Држави|f-p}}, {{t+|mk|Америка|f}}
 * Malay: {{t+|ms|Amerika Syarikat}}, {{t|ms|Amerika}}
 * Malayalam: {{t|ml|അമേരിക്കൻ ഐക്യനാടുകൾ}}
 * Maltese: {{t|mt|Stati Uniti ta' l-Amerika}}, {{t|mt|l-Istati Uniti ta' l-Amerika}}, {{t|mt|Stati Uniti}}, {{t|mt|l-Istati Uniti}}, {{t|mt|Amerika|f|alt=L-Amerika}}
@@ -159,8 +159,8 @@
 * Northern Sami: {{t|se|Amerihká ovttastuvvan stáhtat}}
 * Northern Thai: {{t|nod|ᩋᩡᨾᩮᩁᩥᨠᩣ}}, {{t|nod|ᩈᩡᩉᩡᩁᩢᩛᩋᩡᨾᩮᩁᩥᨠᩣ}}
 * Norwegian:
-*: Bokmål: {{t+|nb|Amerikas forente stater}}, {{t|nb|De forente stater}}, {{t+|nb|Amerika}}
-*: Nynorsk: {{t|nn|Dei amerikanske Sambandsstatane}}
+*: Bokmål: {{t+|nb|Amerikas forente stater|m-p}}, {{t|nb|De forente stater|m-p}}, {{t+|nb|Amerika|n}}
+*: Nynorsk: {{t|nn|Dei amerikanske Sambandsstatane|m-p}}
 * Ojibwe: {{t|oj|gichi-mookomaan-aki}}
 * Ossetian: {{t|os|Америкӕйы Иугонд Штаттӕ}}, {{t|os|Америкӕ}}
 * Palauan: {{t|pau|Merikel}}
