--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -47,7 +47,7 @@
 * Abkhaz: {{t|ab|Америка Еиду Аштатқәа}}, {{t|ab|Америка}}
 * Adyghe: {{t|ady|Америкэ Штат Зэхэтхэр}}
 * Afrikaans: {{t|af|Verenigde State van Amerika}}, {{t+|af|Amerika}}
-* Albanian: {{t|sq|Shtete e Bashkuara të Amerikës|m-p}}, {{t+|sq|Shtetet e Bashkuara të Amerikës|m-p}} {{q|definite}}, {{t|sq|Shtete e Bashkuara|m-p}}, {{t|sq|Shtetet e Bashkuara|m-p}} {{q|definite}}, {{t|sq|SHBA|m-p}}, {{t|sq|Amerikë|f}}, {{t+|sq|Amerika|f}} {{q|definite}}
+* Albanian: {{t|sq|Shtete e Bashkuara të Amerikës|m-p}}, {{t+|sq|Shtetet e Bashkuara të Amerikës|m-p}} {{q|definite}}, {{t|sq|Shtete e Bashkuara|m-p}}, {{t+|sq|Shtetet e Bashkuara|m-p}} {{q|definite}}, {{t|sq|SHBA|m-p}}, {{t|sq|Amerikë|f}}, {{t+|sq|Amerika|f}} {{q|definite}}
 * Amharic: {{t|am|የተባበሩት የአሜሪካ ግዛቶች}}
 * Arabic: {{t+|ar|الْوِلَايَاتُ الْمُتَّحِدَةُ الْأَمْرِيكِيَّة|f-p}}, {{t+|ar|الْوِلَايَاتُ الْمُتَّحِدَة|f-p}}, {{t+|ar|أَمْرِيكَا|f}}
 * Aramaic:
