+HK Cantonese <curve#69855671>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -302,6 +302,28 @@ Attested since the 1690s, from {{der|en|la|curvus|t=bent, curved}}, ultimately f
 
 ----
 
+==Chinese==
+
+===Etymology===
+From {{bor|yue|en|curve||grading system}}.
+
+===Pronunciation===
+* {{IPA|yue|/kʰœ̽ːf⁵⁵/}}
+
+===Noun===
+{{head|zh|noun}} {{tlb|zh|Hong Kong Cantonese}}
+
+# [[#English|curve]] {{gl|grading system}} {{zh-mw|條}}
+# {{lb|zh|by extension}} [[standard]]s {{gl|something used as a measure for comparison}} {{zh-mw|條}}
+
+===Related terms===
+* {{zh-l|拉curve}}
+
+[[Category:Chinese terms written in foreign scripts]]
+[[Category:Cantonese lemmas]][[Category:Cantonese nouns]]
+
+----
+
 ==Dutch==
 
 ===Etymology===
