--- a/en/i/ich.12974.wikitext
+++ b/en/i/ich.12974.wikitext
@@ -595,7 +595,7 @@ From {{inh|jac|myn-pro|*iihk}}.
 * {{alter|li|ech||Southeast Limburgish}}
 
 ===Etymology===
-From {{der|li|goh|ih}}, from {{inh|li|gem-pro|[[*ek]], [[*ik]]}}.
+From {{inh|li|goh|ih}}, from {{inh|li|gmw-pro|*ik}}, from {{inh|li|gem-pro|[[*ek]], [[*ik]]}}.
 
 ===Pronunciation===
 * {{a|most dialects}} {{IPA|li|[ɪx]}}
