--- a/en/i/ich.12974.wikitext
+++ b/en/i/ich.12974.wikitext
@@ -91,7 +91,9 @@ From {{inh|gsw|gmh|ich}}, from {{inh|gsw|goh|ih}}, from {{inh|gsw|gem-pro|*ek}},
 * {{l|gmw-cfr|ech}} {{qualifier|some dialects of Ripuarian; Moselle Franconian, unstressed, enclitic}}
 
 ===Etymology===
-From {{inh|gmw-cfr|gmh|ich}}, from {{inh|gmw-cfr|goh|ih}}, from {{inh|gmw-cfr|gem-pro|[[*ek]], [[*ik]]}}, from {{inh|gmw-cfr|ine-pro|*éǵh₂}}. The expected form is ''ech''; the variant ''ich'' is from a form {{m|goh|*īh}} with expressive lengthening (compare the corresponding diphthong in Moselle Franconian).
+From {{inh|gmw-cfr|gmh|ich}}, from {{inh|gmw-cfr|goh|ih}}, from {{inh|gmw-cfr|gmw-pro|*ik}}, from {{inh|gmw-cfr|gem-pro|[[*ek]], [[*ik]]}}, from {{inh|gmw-cfr|ine-pro|*éǵh₂}}. 
+
+The expected form is ''ech''; the variant ''ich'' is from a form {{m|goh|*īh}} with expressive lengthening (compare the corresponding diphthong in Moselle Franconian).
 
 ===Pronunciation===
 * {{IPA|gmw-cfr|/iɕ/|[iɕ]}}
