--- a/en/i/ich.12974.wikitext
+++ b/en/i/ich.12974.wikitext
@@ -67,7 +67,7 @@ The Northern dialectal form, ''ik'' (which derives from the same Old English roo
 * {{alter|gsw|ig||Bern}}
 
 ===Etymology===
-From {{inh|gsw|gmh|ich}}, from {{inh|gsw|goh|ih}}, from {{inh|gsw|gem-pro|*ek}}, {{m|gem-pro|*ik}}. Cognate with {{cog|de|ich}}, {{cog|nl|ik}}, {{cog|en|I}}, {{m|en|ich}}, {{cog|is|ég}}.
+From {{inh|gsw|gmh|ich}}, from {{inh|gsw|goh|ih}}, from {{inh|gsw|gmw-pro|*ik}}, from {{inh|gsw|gem-pro|*ek}}, {{m|gem-pro|*ik}}. Cognate with {{cog|de|ich}}, {{cog|nl|ik}}, {{cog|en|I}}, {{m|en|ich}}, {{cog|is|ég}}.
 
 ===Pronunciation===
 * {{a|Lower Alemannic (Northern Alsace)}} {{IPA|gsw|/iʃ/|/eʃ/|/iː/}} {{q|''i'' is the unstressed pronoun, used after the verb, as in ''hiit hàw '''i''' dìs g'màcht'' (today I have done this), but it is always ''ìch'' before the verb, never ''i''}}
