--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -84,7 +84,7 @@ The noun is derived from the verb.
 |creepy
 |creepy-crawly
 |give someone the creeps
-}}
+|creep on|creep up|make someone's flesh creep}}
 
 ====Translations====
 {{trans-see|to move slowly with the abdomen close to the ground|crawl}}
@@ -224,6 +224,8 @@ The noun is derived from the verb.
 {{der-top|frightening and/or disconcerting person}}
 * {{l|en|creep-shame}}
 {{der-bottom}}
+
+{{der2|en|title=others terms (unsorted by one lazy Wiktionary)|creep joint|creep shot|downhill creep|Pollyanna creep|power creep|soil creep}}
 
 ====Translations====
 {{trans-top|movement of something that creeps}}
