--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -203,7 +203,7 @@ Largely displaced native {{ncog|ang|maga}}, whence {{w|Modern English}} {{m|en|m
 * Ojibwe: {{q|my stomach}} {{t|oj|nimisad}}
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|желудъкъ|m}}
-* Old English: {{t|ang|maga|m}}, {{t|ang|wamb|f}}, {{t|ang|būc|m}}
+* Old English: {{t|ang|maga|m}}
 * Old Turkic: {{t|otk|𐰴𐰆𐰺𐰆𐰍𐰽𐰴|ts=quruɣsaq}}
 * Oriya: {{t+|or|ଫଣ୍ଡ}}
 * Oromo: {{t|om|garaacha}}
