--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -29,7 +29,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 #### ''[[Prunus angustifolia]]'' ({{vern|Chickasaw plum}} or {{vern|sand plum}})
 #### {{taxlink|Prunus hortulana|species|ver=161009}} ({{vern|hortulan plum}})
 #### {{taxlink|Prunus nigra|species|ver=161009}} ({{vern|Canadian plum}} or {{vern|black plum}})
-#### {{taxlink|Prunus rivularis|species|ver=161009}} ({{vern|creek plum}} or [[hog plum]])
+#### {{taxlink|Prunus rivularis|species|ver=161009}} ([[creek plum]] or [[hog plum]])
 #### ''[[Prunus subcordata]]'' ([[Klamath plum]] or [[Oregon plum]])
 ### {{taxlink|Prunus sect. Armeniaca|section|ver=161009}} (better known as [[apricot]]s)
 #### ''[[Prunus mume]]'', an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice or wine; [[ume]].
