--- a/en/i/ich.12974.wikitext
+++ b/en/i/ich.12974.wikitext
@@ -513,7 +513,7 @@ Nord-Thüringisch:
 
 ===Alternative forms===
 
-===Noun===
+===Pronoun===
 {{head|vmf|pronoun}}
 
 # [[I]]
@@ -582,6 +582,15 @@ From {{der|hrx|gmh|ich}}, from {{inh|hrx|goh|ih}}, from {{inh|hrx|gmw-pro|*ik}},
 
 ===Further reading===
 * [https://hunsriqueanoriograndense.wordpress.com/dicionario-werterbuch/ Online Hunsrik Dictionary]
+
+----
+
+==Hutterisch==
+
+===Pronoun===
+{{head|geh|pronoun}}
+
+# [[I]]
 
 ----
 
