--- a/en/i/ich.12974.wikitext
+++ b/en/i/ich.12974.wikitext
@@ -931,6 +931,15 @@ Cognate to {{cog|de|ich}}.
 
 ----
 
+==Volga German==
+
+===Pronoun===
+{{head|gmw-vog|pronoun}}
+
+# [[I]]
+
+----
+
 ==Yucatec Maya==
 
 ===Etymology===
