--- a/en/感/感.15666.wikitext
+++ b/en/感/感.15666.wikitext
@@ -138,7 +138,7 @@ From {{bor|ja|ltc|-|sort=かん}} {{m|zh|感|tr=kom<sup>X</sup>}}.
 {{ja-noun|かん}}
 
 # [[feeling]]; [[sense]]
-#: {{ja-usex|[[虚無]]'''感'''|きょむ'''かん'''|'''feeling of''' emptiness}}
+#: {{ja-usex|[[虚%無]]'''感'''|きょ%む'''かん'''|'''feeling of''' emptiness}}
 
 ===References===
 <references/>
