--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -466,6 +466,11 @@ From {{der|fro|la|constare}}, present infinitive of {{m|la|consto|t=I stand firm
 ===Etymology===
 Borrowed from {{bor|cy|en|cost}}.
 
+===Pronunciation===
+* {{a|cy-N}} {{IPA|cy|/koːsd/|[kʰoːst]}}
+* {{a|cy-S}} {{IPA|cy|/kɔsd/|[kʰɔst]}}
+* {{rhymes|cy|ɔsd|s=1}}
+
 ===Noun===
 {{cy-noun|mf|costau}}
 
