/* French */ <et cetera#69907016>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -44,7 +44,8 @@ From {{uder|en|la|et cētera||and the [[other]] [[thing]]s; and the [[rest]] of 
 ==French==
 
 ===Alternative forms===
-* {{alter|fr|et caetera|et cætera|& cetera|et cétéra|etc.|&c.}}
+* {{alter|fr|et caetera|et cætera|& cetera|etc.|&c.}}
+* {{alter|fr|et cétéra|etcétéra||post-1990}}
 
 ===Etymology===
 From {{bor|fr|la|et cētera}}.
