--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -244,6 +244,7 @@ From {{inh|en|enm|skyrte}}, from {{der|en|non|skyrta}}, from {{der|en|gem-pro|*s
 * Maltese: {{t|mt|dublett|m}}
 * Norwegian: {{t+|no|skjørt|n}}
 * Old English: {{t|ang|læppa|m}}
+* Ottoman Turkish: {{t|ota|اتك|tr=etek}}
 * Polish: {{t+|pl|spódnica|f}}
 * Portuguese: {{t+|pt|saia|f}}
 * Russian: {{t+|ru|ю́бка|f}}
