--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Alternative forms===
-* {{l|en|speake}} {{qual|obsolete}}
+* {{alt|en|speake||obsolete}}
 
 ===Etymology===
 From {{inh|en|enm|speken|t=to speak}}, from {{inh|en|ang|specan|t=to speak}}, alteration of earlier {{m|ang|sprecan|t=to speak}}, from {{inh|en|gmw-pro|*sprekan}}, from {{inh|en|gem-pro|*sprekaną|t=to speak, make a sound}}, from {{der|en|ine-pro|*spreg-|t=to make a sound, utter, speak}}.
