/* Noun */ added quote <plum#69922348>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -34,6 +34,7 @@ From {{inh|en|enm|plomme}}, {{m|enm|ploume}}, from {{inh|en|ang|plūme}}, from {
 ### {{taxlink|Prunus sect. Armeniaca|section|ver=161009}} (better known as [[apricot]]s)
 #### ''[[Prunus mume]]'', an Asian fruit more closely related to the [[apricot]] than the plum, usually consumed pickled, dried, or as a juice or wine; [[ume]].
 ## {{lb|en|now|rare}} A dried grape or [[raisin]], as used in a pudding or cake. {{defdate|from 17th c.}}
+##* {{quote-book|en|year=1877|title=Mother Gooose’s Nursery Rhymes|text=Little Jack Horner sat in a corner, eating a Christmas pie; he put in his thumb, and he took out a '''plum''', and said, “What a good boy am I!”}}
 # ''Extended senses.''
 ## {{lb|en|now|rare|archaic}} One hundred thousand [[pound]]s; {{i|generally}} a [[fortune]]. {{defdate|from 18th c.}}
 ##* {{RQ:Smollett Peregrine Pickle|volume=I|1|text=He {{...}} acquired a plentiful fortune, tho', to his infinite regret, he died before it amounted to a '''Plum''' {{...}}.}}
