--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -28,7 +28,7 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 |1=en
 |passage=A knife was flashing in his hand, and just as he was about to take a '''stab''' at me, the smith grabbed his arm from behind.}}
 # A wound made by stabbing.
-#* {{quote-book|1=en|year=1887|author=H. Rider Haggard|authorlink=H. Rider Haggard|title=She: A History of Adventure|url=http://www.gutenberg.org/files/3155/3155-0.txt|passage=I opened the man's linen robe, and there over his heart was a dagger-wound, and beneath the woman's fair breast was a like cruel '''stab''', through which her life had ebbed away.}}
+#* {{RQ:Haggard She|passage=I opened the man's linen robe, and there over his heart was a dagger-wound, and beneath the woman's fair breast was a like cruel '''stab''', through which her life had ebbed away.}}
 # Pain inflicted on a person's feelings.
 #* {{quote-book
 |year=2001
