/* Korean */ added eumhun reading and restructured section <愧#69941199>

--- a/en/愧/愧.15674.wikitext
+++ b/en/愧/愧.15674.wikitext
@@ -90,10 +90,9 @@ Origins related to {{zh-l|媿}}. In ''{{w|Shuowen}}'', understood as an {{Han co
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=괴|eumhun=|rv=goe|mr=koe|y=koy}}
+{{ko-hanja|부끄러워하다|부끄러워할|괴}}
 
-# [[ashamed]]
-# conscience-stricken
+# {{hanja form of|괴|[[ashamed]], [[conscience]]-[[stricken]]}}
 
 ----
 
