--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -340,9 +340,8 @@ The verb became irregular, possibly under the influence of the semantically simi
 ##* '''2004''', Catherine Asaro, ''[http://books.google.com/books?id=O2Rj1kYTF1kC The Moon's Shadow]'', p.40
 ##*: No, a far more natural beauty '''caught''' him.
 ## {{lb|en|transitive}} To [[attract]] and [[hold]] (a faculty or organ of sense). {{defdate|from 17<sup>th</sup>c.}}
-##: {{ux|en|He managed to '''catch''' her attention}}
+##: {{ux|en|He managed to '''catch''' her attention.}}
 ##: {{ux|en|The enormous scarf did '''catch''' my eye.}}
-# {{lb|en|heading}} ''To obtain or experience''
 
 ====Conjugation====
 {{en-conj|es|old=1|past=caught|past2=catched|past2_qual=note1|past_2sg_old=caughtest|past_2sg_old2=catchedst|note1=Nonstandard.}}
