--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -15,7 +15,7 @@ Borrowed from {{bor|en|sh|Jugoslavija}}, in turn from {{m|sh|jug||south}} and {{
 {{en-proper noun}}
 
 # {{senseid|en|Q36704}} {{lb|en|historical}} A former country on the [[Balkan Peninsula]], made up of the now-independent nations of [[Bosnia and Herzegovina]], [[Croatia]], [[North Macedonia]], [[Montenegro]], [[Serbia]], [[Kosovo]], and [[Slovenia]]; it disintegrated in the 1990s.
-# The [[Federal Republic of Yugoslavia]].
+# {{lb|en|historical}} The [[Federal Republic of Yugoslavia]].
 # {{lb|en|nonstandard}} [[Serbia and Montenegro]].
 
 ====Derived terms====
