--- a/en/旺/旺.16930.wikitext
+++ b/en/旺/旺.16930.wikitext
@@ -54,7 +54,7 @@ Now {{Han compound|日|王|c1=s|c2=p|t1=sun|ls=psc|nocap=y}}.
 ====Synonyms====
 {{zh-dial|熱鬧}}
 
-=====Compounds=====
+====Compounds====
 {{zh-der|健旺|南旺|喜氣旺色|持旺|暢旺|旺盛|打旺壯|旺月|旺銷|旺季|旺相|肝火旺|趙旺|興旺|見旺|陰虛火旺|脈旺|旺塘}}
 
 ===Pronunciation 2===
@@ -101,7 +101,7 @@ Now {{Han compound|日|王|c1=s|c2=p|t1=sun|ls=psc|nocap=y}}.
 
 From {{der|ja|ltc|sort=おう|-}} {{ltc-l|旺}}.
 
-====Affix====
+===Affix===
 {{ja-pos|affix|おう|hhira=わう}}
 
 # [[prosperous]]; [[vigorous]]
