/*English:Derived terms*/ promoted all child sections to siblings <blond#69958724>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -264,7 +264,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 |white blond
 |blond lace|bottle-blond}}
 
-====See also====
+===See also===
 * [[brunet]], [[brunette]]
 * [[Appendix:Colors]]
 
