--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -153,6 +153,7 @@ From {{uder|en|nl|Nieuw-Zeeland||new Zeeland}} ({{m|nl|nieuw}} calqued as {{m|en
 * Nepali: {{t|ne|न्युजिल्यान्ड}}
 * Norfuk: {{t|pih|Nyuu Ziilan}}
 * Norman: {{t|nrf|Nouvelle Zélande|f}}
+* Northern Ndebele: {{t|nd|Nyuzilandi}}
 * Norwegian:
 *: Bokmål: {{t+|nb|New Zealand|n}}, {{t|nb|Ny-Zealand|n}}
 *: Nynorsk: {{t+|nn|New Zealand|n}}, {{t|nn|Ny-Zealand|n}}
