/*Japanese:Etymology*/ promoted all child sections to siblings <偏#69968068>

--- a/en/偏/偏.11103.wikitext
+++ b/en/偏/偏.11103.wikitext
@@ -141,12 +141,12 @@ From {{bor|nan|zhx-teo|便|tr=pin1}}.
 ===Etymology===
 {{ja-kanjitab|へん|yomi=o}}
 
-====Noun====
+===Noun===
 {{ja-noun|へん}}
 
 # the [[left-hand]] [[component]] of a [[kanji]]
 
-=====Coordinate terms=====
+====Coordinate terms====
 * {{ja-r|旁|つくり}}: the [[right-hand]] component
 
 ===References===
