--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -156,14 +156,14 @@ A way to use {{lang|zh|是}} with an adjective is to use {{zh-l|的|tr=de}} afte
 
 ===Etymology 1===
 
-===Hanja===
+====Hanja====
 {{ko-hanja|이|시}}
 
 # {{hanja form of|시|[[this]], to [[be]]}}
 
 ===Etymology 2===
 
-===Hanja===
+====Hanja====
 {{ko-hanja|바르다#Etymology 3|바를|시}}
 
 # {{hanja form of|시|[[right]]}}
