t+acw:[[رعد]] ([[WT:EDIT|Assisted]]) <thunder#70148972>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -81,6 +81,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 * Albanian: {{t+|sq|bubullimë|f}}, {{t|sq|mumrimë|f}}
 * Arabic: {{t+|ar|رَعْد|m}}
 *: Egyptian Arabic: {{t|arz|رعد|m|tr=raʿd}}
+*: Hijazi Arabic: {{t|acw|رعد|m|tr=raʿad, raʿd}}
 *: Moroccan Arabic: {{t|ary|رعد|m|tr=raʿd}}
 * Aramaic:
 *: Classical Syriac: {{t|syc|ܪܥܡܐ|m|tr=raʿmā}}
