--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -82,7 +82,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Afrikaans: {{t|af|blond}}
 * Arabic: {{t|ar|أَشْقَر|m}}, {{t|ar|شَقْرَاء|f}}, {{t|ar|شُقْر|p}}
 *: Egyptian Arabic: {{t|arz|أشقر|tr=ašʾar}}
-* Armenian: {{t-needed|hy}}
+* Armenian: {{t+|hy|շեկ}}
 * Azerbaijani: {{t+|az|sarışın}}
 * Breton: {{t+|br|melegan}}
 * Bulgarian: {{t+|bg|рус}}, {{t+|bg|светъл}}
