/* Korean */ added eumhun reading and definitions <均#70235396>

--- a/en/均/均.13002.wikitext
+++ b/en/均/均.13002.wikitext
@@ -109,9 +109,11 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|균}}
+{{ko-hanja|고르다|고를|균}}
 
-# {{rfdef|ko|sort=土04}}
+# {{hanja form of|경|[[choose]], [[select]]}}
+# {{hanja form of|경|[[equal]], [[even]], [[fair]]}}
+# {{hanja form of|경|[[all]], [[also]]}}
 
 ----
 
