--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -502,6 +502,7 @@ The meaning of ''to ejaculate'' is considered vulgar slang. Many style guides an
 #* '''1869''', RD Blackmoore, ''Lorna Doone'', II:
 #*: “If we count three before the '''come''' of thee, thwacked thou art, and must go to the women.”
 # {{lb|en|vulgar|slang}} [[semen|Semen]]
+#: When a man uses a condom during sex, he takes all of his '''come''' with him, preventing her from getting pregnant.
 # {{lb|en|vulgar|slang}} Female [[ejaculatory]] [[discharge]].
 
 =====Usage notes=====
