--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -62,6 +62,7 @@ There is also an occasional weak form ''kəm''. See [[c’mon]].
 #* {{RQ:Hollinghurst Line|chapter=2|passage=Nick was more and more seriously absorbed, but then just before he '''came''' he had a brief vision of himself, as if the trees and bushes had rolled away and all the lights of London shone in on him: little Nick Guest from Barwick, Don and Dot Guest's boy, fucking a stranger in a Notting Hill garden at night.}}
 #* {{quote-book|en|year=2008|author={{w|Philip Roth}}|title={{w|Indignation (novel)|Indignation}}|passage= The sheer unimaginableness of '''coming''' into her mouth — of '''coming''' into anything other than the air or a tissue or a dirty sock — was an allurement too stupendous for a novice to forswear.}}
 #: {{ux|en|He '''came''' after a few minutes.}}
+#: {{ux|en|Don't '''come''' in me!}}
 # {{lb|en|intransitive|of milk}} To become [[butter]] by being [[churned]].
 # {{lb|en|copulative|figuratively|with ''close''}} To [[approach]] a state of being or accomplishment.
 #: {{ux|en|They '''came''' very close to leaving on time.&nbsp;&nbsp; His test scores '''came''' close to perfect.}}
