--- a/en/偆/偆.11093.wikitext
+++ b/en/偆/偆.11093.wikitext
@@ -10,7 +10,7 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|alt=𠎲}}
 
 ===Glyph origin===
 {{Han etym}}
@@ -22,15 +22,17 @@
 |mn=chhun
 |mc=y
 |oc=y
-|cat=
+|cat=a
 }}
 
 ===Definitions===
 {{zh-hanzi}}
 
-rich; thick; happy appearance
+# {{lb|zh|obsolete}} [[happy]]
+# {{lb|zh|obsolete}} [[rich]]; [[thick]]
 
-# {{rfdef|zh}}
+===Compounds===
+{{zh-der|偆偆}}
 
 ===References===
 * {{R:twedu|C00205}}
