--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -263,6 +263,7 @@ Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates in
 * Western Bukidnon Manobo: {{t|mbb|ruɣung}}
 * Westrobothnian: {{t|gmq-bot|Thorn|m}}
 * Winnebago: {{t|win|kʼoo}}
+* Yakut: {{t|sah|этиҥ}}
 * Yámana: {{t|yag|kalaša}}
 * Zazaki: {{t|zza|gumlerz}}
 * Zhuang: {{t|za|byajraez}}
