--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -447,6 +447,8 @@ The verb is from {{inh|en|enm|braunchen}}, from the noun.
 #*: The tree throve and '''branched''' so heavily that the windows of Lower West and the Doll's Flat were darkened.
 # {{lb|en|ambitransitive}} To (cause to) divide into separate parts or subdivisions.
 # {{lb|en|intransitive|computing}} To [[jump]] to a [[different]] [[location]] in a [[program]], especially as the result of a [[conditional]] [[statement]].
+# {{lb|en|transitive}} To strip of branches.
+#* {{quote-book|1=en|year=1890|author=James George Frazer|title=The Golden Bough|vol=2|page=55|text=They cut down a young pear-tree, '''branch''' it, and carry it home.}}
 # {{lb|en|transitive|colloquial}} To [[discipline]] (a [[union]] member) at a branch meeting.
 #* '''2003''', Paul Routledge, ''The Bumper Book of British Lefties'' (page 199)
 #*: His staff were 'not journalists, but Communists', he maintained. Nonetheless, in 1948 his vigorous editorship took the paper's circulation to 120,000 a day. The following year, he was ''''branched'''' by the National Union of Journalists for an intemperate attack on Fleet Street.
