/* Derived terms */ <bridge#70322818>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -154,6 +154,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 |Newnham Bridge
 |Norton Bridge
 |Park Bridge
+|Pateley Bridge
 |Pooley Bridge
 |Pye Bridge
 |[[road bridge]], [[roadbridge]]
