--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -563,6 +563,26 @@ Inherited from {{inh|roa-oca|la|fidelis|fidēlem|faithful}}. Replaced by the bor
 
 ----
 
+==Old French==
+
+===Alternative forms===
+* {{alt|fro|feal|feau|feeil|fial|fiel}}
+* {{alt|fro|fedeil|fetheil||early}}
+
+===Etymology===
+From {{inh|fro|la|fidelis}}.
+
+===Adjective===
+{{fro-adj|mf}}
+
+# [[faithful]]; [[loyal]]
+
+====Descenants====
+* {{desc|frm|feal|fieu|foial}}
+* {{desctree|sco-osc|feal}}
+
+----
+
 ==Seri==
 [[Image:Stockentenpaar.JPG|thumb|right|alt=Two ducks standing beside one another|A '''mallard''' hen and a '''mallard''' tom]]
 
