--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -577,7 +577,7 @@ From {{inh|fro|la|fidēlis}}.
 
 # [[faithful]]; [[loyal]]
 
-====Descenants====
+====Descendants====
 * {{desc|frm|feal|fieu|foial}}
 ** {{desc|fr|féal}}
 * {{desctree|sco-osc|feal}}
