--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -42,6 +42,9 @@ From {{inh|en|enm|counten}}, borrowed from {{der|en|xno|conter}}, from {{der|en|
 # {{lb|en|transitive|obsolete}} To [[recount]], to [[tell]].
 # {{lb|en|intransitive|UK|legal|obsolete}} To [[plead]] [[orally]]; to [[argue]] a matter in [[court]]; to recite a count.<ref>{{R:Burrell LD}}</ref>
 
+=====Conjugation=====
+{{en-conj|old=1}}
+
 =====Synonyms=====
 * {{sense|determine the number of objects in a group}} {{l|en|enumerate}}, {{l|en|number}}; see also [[Thesaurus:count]]
 
