/* Latin */ topics <Israel#70345642>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -525,7 +525,7 @@ From {{bor|id|nl|Israël}}, from {{der|id|dum|israel}}, from {{der|id|odt|israel
 * {{R:L&S}}
 <references />
 
-[[Category:la:Countries in Asia]]
+{{C|la|Judaism|Biblical characters|Countries in Asia}}
 
 ----
 
