--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -498,7 +498,7 @@ From {{bor|id|nl|Israël}}, from {{der|id|dum|israel}}, from {{der|id|odt|israel
 ==Latin==
 
 ===Alternative forms===
-* {{alt|la|Isrāhēl|Istrāhēl}}
+* {{alt|la|Isrāhēl|Isdrāhēl|Istrāhēl}}
 * {{l|la|Israël}}
 
 ===Etymology===
@@ -510,7 +510,7 @@ From {{bor|id|nl|Israël}}, from {{der|id|dum|israel}}, from {{der|id|odt|israel
 ===Proper noun===
 {{la-proper noun|((Isrāēl<0>,Isrāēl<3>))|g=m}}
 
-# {{l|en|Israel}}, another name of the patriarch [[Jacob]]
+# {{lb|la|Late Latin}} {{l|en|Israel}}, another name of the patriarch [[Jacob]]
 #* {{Q|la|Jerome|Vulgate|Genesis|32|28|quote=At ille: Nequaquam, inquit, Iacob appellabitur nomen tuum, sed '''Israhel''': quoniam si contra Deum fortis fuisti quanto magis contra homines praevalebis.}}
 # {{lb|la|New Latin}} {{l|en|Israel}}, a country in the [[Middle East]]
 
@@ -526,6 +526,7 @@ From {{bor|id|nl|Israël}}, from {{der|id|dum|israel}}, from {{der|id|odt|israel
 <references />
 
 {{C|la|Judaism|Biblical characters|Countries in Asia}}
+[[Category:Ecclesiastical Latin]]
 
 ----
 
