--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -394,7 +394,7 @@ Borrowed from {{bor|tl|es|libre}}. Displaced older {{m|tl|gratis}}, also borrowe
 ===Pronunciation===
 * {{hyph|tl|lib|re}}
 * {{tl-IPA}}
-* {{tl-IPA|libré}}
+* {{tl-IPA|li.bré}}
 
 ===Adjective===
 {{tl-adj||head2=libré}}
