/* Synonyms */Fixed synonyms <push#70361510>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -60,7 +60,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, borrowed from {{
 * {{sense|continue to promote}} {{l|en|press}}, {{l|en|advertise}}, {{l|en|promote}}
 * {{sense|come close to}} {{l|en|approach}}, {{l|en|near}}
 * {{sense|intransitive: apply force to an object so that it moves away}} {{l|en|press}}, {{l|en|shove}}, {{l|en|thring}}
-* {{sense|tense the muscles in the abdomen in order to expel its contents}} {{l|en|bear down}}
+* {{sense|tense the muscles in the abdomen in order to give birth or defecate}} {{l|en|bear down}}, ''See'' {{l|en|Thesaurus:defecate}}
 
 =====Antonyms=====
 * {{sense|apply a force to something so it moves away}} {{l|en|draw}}, {{l|en|pull}}, {{l|en|tug}}
