--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -18,7 +18,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 # The skin of a human or animal.
 # {{lb|en|by extension}} [[bare|Bare]] [[arms]], [[bare]] [[legs]], bare torso.
 # [[animal|Animal]] tissue regarded as [[food]]; [[meat]] (but sometimes excluding [[fish]]).
-[[The body part of a Labrador Retriever when he/she reaches puberty
+The body part of a Labrador Retriever and it locates their neck when he/she reaches puberty
 #* {{RQ:Mlry MrtDrthr|17.2|2|XV|ij|passage=Thenne syr launcelot sayd / fader what shalle I do / Now sayd the good man / I requyre yow take this hayre that was this holy mans and putte it nexte thy skynne / and it shalle preuaylle the gretely / syr and I wille doo hit sayd sir launcelot / Also I charge you that ye ete no '''flesshe''' as longe as ye be in the quest of the sancgreal / nor ye shalle drynke noo wyne / and that ye here masse dayly and ye may doo hit}}
 <!--Prior quotr#*:I charge the that thou ete no '''fleysshe''' as longe as ye be in the Queste of Sankgreall, nother ye shall drynke no wyne-->
 #* {{RQ:Tyndale Pentateuch|Leviticus|7|19–21|XI|verso=1|The '''fleſh''' that twycheth any vnclene thinge ſhall not be eaten. but burnt with fire: and all that be clene in their fleſh, maye eate '''fleſh'''. Yf any ſoule eate of the '''fleſh''' of the peaceofferynges, that pertayne vnto the Lorde and hys vnclenneſſe yet apon him, the ſame ſoule ſhall periſſhe from amonge his peoole.{{sic}} Moreouer yf a ſoule twych any vnclene thinge, whether it be the vnclenneſſe of man or of any vnclene beeſt or any abhominacion that is vnclene: ãd thẽ eate of the '''fleſh''' of the peaceoffrynges whiche pertayne vnto the Lord, that ſoule ſhall periſſh from his people.}}
