/* Verb */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <stab#70374406>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -141,12 +141,13 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 [[File:Comic History of Rome p 308 The End of Julius Caesar.jpg|thumb|A man about to be stabbed.]]
 {{en-verb}}
 
-# {{lb|en|transitive}} To [[pierce]] or to [[wound]] (somebody) with a [[pointed]] [[tool]] or [[weapon]], especially a [[knife]] or [[dagger]].
-#* {{quote-book|en|year=1905|author=[[w:Emma Orczy|Baroness Emmuska Orczy]]| title=[[w:The Case of Miss Elliott|The Tremarn Case]]| chapter=1| url=http://openlibrary.org/works/OL8479084W| passage=“There the cause of death was soon ascertained ; the victim of this daring outrage had been '''stabbed''' to death from ear to ear with a long, sharp instrument, in shape like an antique stiletto, which {{...}} was subsequently found under the cushions of the hansom.&nbsp;[…]”}}
+# {{lb|en|transitive}} To [[pierce]] or to [[wound]] (somebody) with a (usually [[pointed]]) [[tool]] or [[weapon]], especially a [[knife]] or [[dagger]].
 #: {{ux|en|If you '''stab''' him in the heart he won't live long enough to retaliate.}}
+#* {{quote-book|en|year=1905|author=[[w:Emma Orczy|Baroness Emmuska Orczy]]| title=[[w:The Case of Miss Elliott|The Tremarn Case]]| chapter=1| url=http://openlibrary.org/works/OL8479084W| passage="There the cause of death was soon ascertained ; the victim of this daring outrage had been '''stabbed''' to death from ear to ear with a long, sharp instrument, in shape like an antique stiletto, which {{...}} was subsequently found under the cushions of the hansom.&nbsp;[…]"}}
+#* {{quote-av|en|author=Drachinifel|title=Guadalcanal Campaign - Santa Cruz (IJN 2 : 2 USN)|date=3 February 2021|url=https://www.youtube.com/watch?v=xY2LC6Rz7JE|archiveurl=https://web.archive.org/web/20221204001940/https://www.youtube.com/watch?v=xY2LC6Rz7JE|archivedate=4 December 2022|accessdate=11 December 2022|time=12:32|text=''Hornet'' blazed away as best she could, but, having to split her attention between high and low attackers, as well as having the aft 5-inch battery temporarily disabled by a young officer who'd accidentally run the guns into their stops, freezing them in position until the issue could be sorted, meant that two 550-pound semi-armor-piercing bombs, and one fractionally-lighter high-explosive bomb, soon crashed down, the first two '''stabbing''' deep into the ship and the other one blowing a hole in the flight deck, accompanied by a dive bomber that had been shot down but elected to go out by slamming into the ''Hornet'' as opposed to the sea.  In some small comfort, ''that'' aircraft's bomb didn't go off as well.}}
 # {{lb|en|transitive}} To [[thrust]] in a stabbing motion.
 #: {{ux|en|to '''stab''' a dagger into a person}}
-# {{lb|en|intransitive}} To [[recklessly]] hit with the [[tip]] of a [[pointed]] [[object]], such as a [[weapon]] or [[finger]] {{non-gloss definition|(often used with [[at]])}}.
+# {{lb|en|intransitive}} To [[recklessly]] hit with the [[tip]] of a (usually [[pointed]]) [[object]], such as a [[weapon]] or [[finger]] {{non-gloss definition|(often used with [[at]])}}.
 #* {{RQ:Dryden Fables|chapter=Palamon and Arcite|passage=None shall dare / With shortened sword to '''stab''' in closer war.}}
 #: {{ux|en|He '''stabbed''' at my face with the twig but luckily kept missing my eyes.}}
 # {{lb|en|intransitive}} To cause a [[sharp]], painful [[sensation]] {{non-gloss definition|(often used with [[at]])}}.
