/* Noun */  (using [[MediaWiki:Gadget-AjaxEdit.js|AjaxEdit]]) <stab#70376839>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -255,7 +255,7 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 {{en-noun}}
 
 # {{lb|en|aviation|slang}} The horizontal or vertical [[stabilizer]] of an aircraft.
-#: {{quote-web|en|year=2020|author=Chris Brady|title=737 MAX - MCAS|work=The Boeing 737 Technical Site|url=http://www.b737.org.uk/mcas.htm|archiveurl=https://web.archive.org/web/20210123014020/http://www.b737.org.uk/mcas.htm|archivedate=23 January 2021|text=If the pilots used electric pitch trim, it would only pause MCAS for 5s; to deactivate it you have to switch off the '''STAB''' TRIM CUTOUT switches.}}
+#* {{quote-web|en|year=2020|author=Chris Brady|title=737 MAX - MCAS|work=The Boeing 737 Technical Site|url=http://www.b737.org.uk/mcas.htm|archiveurl=https://web.archive.org/web/20210123014020/http://www.b737.org.uk/mcas.htm|archivedate=23 January 2021|text=If the pilots used electric pitch trim, it would only pause MCAS for 5s; to deactivate it you have to switch off the '''STAB''' TRIM CUTOUT switches.}}
 
 ===Etymology 3===
 
