--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -52,13 +52,14 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 * Bulgarian: {{t+|bg|прилепвам}}, {{t|bg|придържам се о}}
 * Chinese:
 *: Mandarin: {{t|cmn|粘住|tr=niánzhù|sc=Hani}}, {{t+|cmn|依附|tr=yīfù|sc=Hani}}
+* Czech: {{t|cs|držet|alt=držet se|impf}}, {{t|cs|lnout|impf}}, {{t|cs|přiléhat|impf}}, {{t|cs|lpět|impf}}
 * Dutch: {{t+|nl|klampen}}
 * Esperanto: {{t|eo|alkroĉiĝi}}, {{t|eo|alteni}}
 * Estonian: {{t|et|liibuma}}
 * Finnish: {{t+|fi|takertua}}, {{t+|fi|tarrautua}}
 * French: {{t+|fr|accrocher}}, {{t+|fr|accrocher|alt=s'accrocher}}, {{t+|fr|coller}}, {{t+|fr|coller|alt=se coller}}
 * Galician: {{t+|gl|soster}}, {{t+|gl|agarrar}}, {{t+|gl|suxeitar}}
-* German: {{t+|de|haften}}, {{t+|de|klammern}}
+* German: {{t+|de|haften}}, {{t+|de|klammern|alt=sich klammern}}
 * Indonesian: {{t+|id|sangkut|alt=menyangkut}}, {{t+|id|sangkut|alt=menyangkutkan}}, {{t+|id|gantung|alt=bergantung}}, {{t+|id|gantung|alt=menggantung}}, {{t+|id|gantung|alt=menggantungkan}}
 {{trans-mid}}
 * Italian: [[aggrapparsi]] <ref>''Oxford-Paravia Concise - Dizionario Inglese-Italiano e Italiano-Inglese (in collaborazione con Oxford University Press)''. Edited by Maria Cristina Bareggi. Torino: Paravia, 2003. [[W:Wikipedia:book sources|ISBN 8839551107]]. [https://web.archive.org/web/20060421055758/http://oxfordparavia.it/ Online version]</ref>, {{t+|it|abbarbicarsi}}, {{t|it|appiccicarsi}}, {{t|it|avvilupparsi}}, {{t+|it|aderire}}, {{t+|it|attaccarsi}}
@@ -76,7 +77,8 @@ From {{inh|en|enm|clingen}}, from {{inh|en|ang|clingan|t=to adhere}}, from {{inh
 {{trans-bottom}}
 
 {{trans-top|(figuratively) feel strongly about}}
-* German: {{t+|de|hängen|alt=hängen an}}
+* Czech: {{t|cs|lpět|impf}} 
+* German: {{t+|de|hängen|alt=hängen an}}, {{t+|de|klammern|alt=sich klammern}}
 * Greek:
 *: Ancient: {{t|grc|[[περιέχω|περιέχομαι]]}}
 {{trans-mid}}
