t+es:[[elegir]] ([[WT:EDIT|Assisted]]) <choose#70381026>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -148,7 +148,7 @@ Cognate with {{cog|sco|chuise}}, {{m|sco|cheese||to choose}}, {{cog|frr|kese||to
 * Sinhalese: {{t|si|තෝරා ගන්නවා|sc=Sinh}}
 * Slovak: {{t|sk|vyberať|impf}}, {{t|sk|vybrať|pf}}
 * Slovene: {{t+|sl|izbrati}}
-* Spanish: {{t+|es|escoger}}
+* Spanish: {{t+|es|escoger}}, {{t+|es|elegir}}
 * Swedish: {{t+|sv|välja}}
 * Tagalog: {{t+|tl|pili}}
 * Tai Dam: {{t|blt|ꪹꪩꪀ}}
