/*English*/ converted bare quote to template <straight#70401420>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -47,10 +47,10 @@ From {{inh|en|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, the past pa
 #* '''2010''' August 4, {{w|The Guardian}}, ''Out of prison and trying to go straight'' [https://www.theguardian.com/society/2010/aug/04/prisoner-going-straight-drugs-crime]:
 #*: How easy is it to go straight after a life spent in and out of prison?
 # [[serious|Serious]] rather than [[comedic]].
-#* '''1988''', Ed Gould, ''Entertaining Canadians: Canada's international stars, 1900-1988'', Cappis Pr Pub Ltd ({{ISBN|9780919763180}}):
-#*: Allan Blye, a CBC-TV mainstay in the early Sixties, worked as a singer, writer and '''straight''' and comedic actor.
-#* '''2004''', Tammy Ravas, ''Peter Schickele: A Bio-bibliography'', Greenwood Publishing Group ({{ISBN|9780313320705}}):
-#*: All of Peter Schickele's music, both '''straight''' and comedic are integrated side by side in this chapter.
+#* {{quote-book|en|year=1988|author=Ed Gould|title=Entertaining Canadians: Canada's international stars, 1900-1988|publisher=Cappis Pr Pub Ltd|isbn=9780919763180
+|passage=Allan Blye, a CBC-TV mainstay in the early Sixties, worked as a singer, writer and '''straight''' and comedic actor.}}
+#* {{quote-book|en|year=2004|author=Tammy Ravas|title=Peter Schickele: A Bio-bibliography|publisher=Greenwood Publishing Group|isbn=9780313320705
+|passage=All of Peter Schickele's music, both '''straight''' and comedic are integrated side by side in this chapter.}}
 #* '''2005''', Bob McCabe, ''The Rough Guide to Comedy Movies'', Rough Guides Limited:
 #*: More success followed, both '''straight''' and comedic, with hits such as ''Dead Poets' Society'' (1989), in which Williams scored another Oscar nomination for skilfully handling a classic &quot;rogue teacher&quot; role that hovers just this side of sentimentality,{{...}}
 # In proper order; as it should be. {{defdate|from 19th c.}}
