/*English:Adjective*/ converted bare quote to template <blonde#70405771>

--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -51,8 +51,8 @@ From {{der|en|frm|-}} {{m|fr|blonde|g=f}}. See {{m|en|blond}}.
 #* '''1895''', S. R. Crockett, ''A Cry Across the Black Water''
 #*: So the great wasteful summer days went by, the glory of the passionate nights of July, the crisper '''blonde''' luxuriance of August.
 # {{lb|en|especially|of a|woman|offensive}} [[stupid|Stupid]], [[ignorant]], [[naive]].
-#* '''2005''', Nancy Bartholomew, ''Lethally Blonde'', Silhouette {{ISBN|9781552543771}}, page 8:
-#*: Emma&#39;s already huge green eyes widen and she gives me this look like, “Oh my God, sometimes you are just so '''blonde'''!”
+#* {{quote-book|en|year=2005|author=Nancy Bartholomew|title=Lethally Blonde|publisher=Silhouette|isbn=9781552543771|page=8
+|passage=Emma&#39;s already huge green eyes widen and she gives me this look like, “Oh my God, sometimes you are just so '''blonde'''!”}}
 #* '''2014''', Aviva Drescher, ''Leggy Blonde: A Memoir'' (Simon and Schuster, {{ISBN|9781476722153}}):
 #*: I was so '''blonde''' I honestly had no idea why he got so angry. He cooled on me for a week or so.
 #* '''2003''', Bennett Fairorth, ''The Land Where My American Mother Died--Palermo, Sicily'' (iUniverse, {{ISBN|9780595279388}}), page 201:
