/*English:Adjective*/ converted bare quote to template <brick#70410325>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -373,8 +373,8 @@ From late {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|
 # {{lb|en|colloquial|AAVE|New England|of weather}} Extremely cold.
 #* '''2005''', ''Vibe'' (volume 12, number 14, page 102)
 #*: And while the tropics are definitely the place to be when it's '''brick''' outside, rocking a snorkel on the beach only works when you're snorkeling.
-#* '''2014''', Ray Mack, ''Underestimated: A Searcher's Story'' ({{ISBN|149315513X}}), page 89:
-#*: He was always hanging tight with me and since he had access to a ride . . . it made traveling easier. I mean it was no biggie brain buster to take the train, but when it's '''brick''' outside . . . fuck the A train.
+#* {{quote-book|en|year=2014|author=Ray Mack|title=Underestimated: A Searcher's Story|isbn=149315513X|page=89
+|passage=He was always hanging tight with me and since he had access to a ride . . . it made traveling easier. I mean it was no biggie brain buster to take the train, but when it's '''brick''' outside . . . fuck the A train.}}
 #* {{quote-journal|en|date=January 18, 2017|work=Esquire |title=Running During Winter Sucks. But It Doesn't Have To.  |author=Anthony J. Yeung|volume=|number=|passage=Read on for tips so you don't freeze your ass off when it's '''brick''' outside.}}
 #* {{quote-journal|en|date=January 4, 2018|work=CBS 6 TV |title=HUD: Creighton Court residents without heat being relocated  |author=Melissa Hipolit|volume=|number=|passage="It's '''brick''' cold. Could you imagine stepping on this with your bare foot?" Taylor said. }}
 
