--- a/en/坤/坤.13031.wikitext
+++ b/en/坤/坤.13031.wikitext
@@ -47,7 +47,7 @@
 
 # [[earth]]
 # [[feminine]], [[female]]
-# 8th of the 8 [[w:Ba Gua|trigrams]]
+# [[eighth]] of the eight [[trigram]]s (''[[bagua]]'') used in [[Taoist]] [[cosmology]], represented by the symbol [[☷]]
 # [[second]] [[hexagram]] of the [[I Ching]]
 
 ====Compounds====
